@@ -1866,6 +1866,7 @@ enum EDITOR_SETPARAMETER_TYPES
 	ESPT_GETWORDDIV                 = 9,
 	ESPT_SHOWWHITESPACE             = 10,
 	ESPT_SETBOM                     = 11,
+	ESPT_SHOWLINENUMBERS            = 12,
 };
 
 #ifdef FAR_USE_INTERNALS
@@ -1957,6 +1958,7 @@ enum EDITOR_OPTIONS
 	EOPT_SHOWTITLEBAR      = 0x00000800,
 	EOPT_SHOWKEYBAR        = 0x00001000,
 	EOPT_SHOWSCROLLBAR     = 0x00002000,
+	EOPT_SHOWLINENUMBERS   = 0x00004000,
 };
 
 
