@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2025-12-01 22:05:24+02:00 - build 6606
+
+1. EOPT_SHOWLINENUMBERS and ESPT_SHOWLINENUMBERS are added to API.
+
+--------------------------------------------------------------------------------
 yulian5 2025-11-29 19:29:09-09:00 - build 6605
 
 1. Editor: add line numbers
